@@ -13,6 +13,7 @@ DIST calculate-sources-2.6.37.tar.bz2 137691 RMD160 a1cbdb58494f7b3244cfd2535179
 DIST calculate-sources-2.6.38.tar.bz2 138240 RMD160 7cdb47d3a95405f9bb3366a52bb0cfbee12c86b3 SHA1 fd3176c76db1098735312eb95abef3d0206fad14 SHA256 b9c98782bd4876d9c73732f161e842125eb39dc5e4768bf629308d619fcbc107
 DIST calculate-sources-2.6.39.tar.bz2 140196 RMD160 c7055d0a2c55a61ccb3693b24fa0b9e8608277cc SHA1 15ee2bc352460cb18fc08ad2cf08122bab43beb4 SHA256 69cbd5f22c8d72204fa29121da77a3b0b035ead1b14613470fe4f9235e266727
 DIST calculate-sources-3.0.tar.bz2 140669 RMD160 1d32ddca971780b7ccea903f1ebbdccad667acf3 SHA1 c2a887fbabf7b145236018aca662aa2096f21b40 SHA256 578071f75b90cac66cee3dc8d9be311bbf21f70b01b69c55d9facaf9a18f324e
+DIST calculate-sources-3.1.5.tar.bz2 159945 RMD160 2e2b3a11ab0f276accdb45d0c4bcce3dfd9062cc SHA1 a1fc1aca436eec51276e9501c2d252add458d749 SHA256 e89ca449c2e511c1371888a03fca94af86a680056b04571a53271783195c0d72
 DIST calculate-sources-3.1.tar.bz2 160221 RMD160 6c201a1bf7e28031c44e112529037ea8b5db16c7 SHA1 32d99a499f78548af8d45da3a3e21afe394e370a SHA256 d56c4f4fc681b0999dadf065860cf7b1b5456995b5f57f2b2a01d8b89437400d
 DIST deblob-2.6.32 84094 RMD160 394f46ec5b869638a7bc2e87beb118167c9bd6cb SHA1 1a2a1efb72126609d9e3b9be99ae5be2751efd06 SHA256 de625f0bd221c9c38d4453f1b709622f222d86a0ae9350d2b7b0e17795e6de6d
 DIST deblob-2.6.35 90643 RMD160 3ddd784a9be90b98f126345fc71b45bc711b66a6 SHA1 a8774f8e27c402701fb436e2bd3ea996d88178b6 SHA256 dda16c3b77c6159715ca05d8a45f509420f5fc708afee038a820e18751f537b7
@@ -49,6 +50,6 @@ EBUILD calculate-sources-2.6.38.8.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3c
 EBUILD calculate-sources-2.6.39.4-r1.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3ce4e632cf62f4 SHA1 e84d2ba547440e5546bdbc51fedf310cc68dd8c2 SHA256 eb949421bdbe497318fa3b460591c20dcc76fde4f716da9d794c0e7bf1df126b
 EBUILD calculate-sources-3.0.13.ebuild 1140 RMD160 400d8cded084a331e29abad1ef4d5bc3ab47454e SHA1 88fb06785aa4c14a3de3b329d66a4a28e6341f94 SHA256 e3add623e30f01c9cfd2d1d174a76642bb884fd21bfe9f9c64b28fd6b1652f90
 EBUILD calculate-sources-3.1.2.ebuild 1138 RMD160 14af601db7019bf59b0fab401cdd43e60ef9a4ae SHA1 33b114d48b33b574c2d5cbe9a1c0d6ddd0252fe1 SHA256 7bf1cb97209c9fa67f12123ce3aa8e46c0f017d88e5e372ef0160c468c1707c0
-EBUILD calculate-sources-3.1.5.ebuild 1140 RMD160 400d8cded084a331e29abad1ef4d5bc3ab47454e SHA1 88fb06785aa4c14a3de3b329d66a4a28e6341f94 SHA256 e3add623e30f01c9cfd2d1d174a76642bb884fd21bfe9f9c64b28fd6b1652f90
-MISC ChangeLog 8418 RMD160 ec81c3824eb973800ce2f0755f9f0ca67df910b3 SHA1 aea337d51be5be4a6366acb62d80c907e8d204a3 SHA256 6ca8fb04f58294f0fe8d037946a694ce7643e130a77f367d8ef6234ff58f8d18
+EBUILD calculate-sources-3.1.5.ebuild 1467 RMD160 09dc49e0db179e6bc796dc27005f90d4a2222827 SHA1 07b3598987626b0cbb451c0501259302d70c8cd3 SHA256 8bd75e59835d12ee70cb0cd4ff22aeed143427a1c5e97b7978c29f11a32c2008
+MISC ChangeLog 8533 RMD160 75fde59cfd853fe8153da30897ef84d28e08ee99 SHA1 818158494c54baed41c9b9611d3ef5d3e0ada2da SHA256 7bb32cfb8bb03eb30efaf059ab0e9c8a9f803e458f615839e067bcb7925ec32b
 MISC metadata.xml 602 RMD160 7ee32e8200b5e17bc717c6aac420bd7902692344 SHA1 da2c0d41e14c0038639c9bd8f59a0b094cb9ae49 SHA256 2b222337597cf63fdd23baa8e278b8c62e4ee2e6d65e92dd52253a857e48913d
