@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-sources-3.1.5.ebuild:
+  Change patch file
+
 *calculate-sources-3.1.5 (11 Dec 2011)
 *calculate-sources-3.0.13 (11 Dec 2011)
 
